tests/snapshots/integration__integration_tests__help__help_switch_short.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - switch
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_ALLOW_PROTOCOL: file
    GIT_CONFIG_COUNT: "2"
    GIT_CONFIG_GLOBAL: /nonexistent/wt/gitconfig
    GIT_CONFIG_KEY_0: user.useConfigOnly
    GIT_CONFIG_KEY_1: rerere.enabled
    GIT_CONFIG_SYSTEM: /nonexistent/wt/gitconfig
    GIT_CONFIG_VALUE_0: "true"
    GIT_CONFIG_VALUE_1: "false"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_PARENT_SHELL: ""
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_PROBE_TIMEOUT_MS: "60000"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
---
success: true
exit_code: 0
----- stdout -----
wt switch - Switch to a worktree; create if needed

Usage: [1m[36mwt switch[0m [36m[OPTIONS][0m [36m[BRANCH][0m [1m[36m[--[0m [36m<EXECUTE_ARGS>...[0m[1m[36m][0m

[1m[32mArguments:[0m
  [36m[BRANCH][0m           Branch, worktree path, shortcut, or PR/MR URL
  [36m[EXECUTE_ARGS]...[0m  Additional arguments for --execute command (after --)

[1m[32mOptions:[0m
  [1m[36m-c[0m, [1m[36m--create[0m             Create a new branch
  [1m[36m-b[0m, [1m[36m--base[0m[36m [0m[36m<BASE>[0m        Base branch
      [1m[36m--path[0m[36m [0m[36m<PATH>[0m        Worktree directory for a new worktree [experimental]
  [1m[36m-x[0m, [1m[36m--execute[0m[36m [0m[36m<EXECUTE>[0m  Program to run after switch
      [1m[36m--clobber[0m            Remove stale paths at target
      [1m[36m--no-cd[0m              Skip directory change after switching
  [1m[36m-h[0m, [1m[36m--help[0m               Print help (see more with '--help')

[1m[32mPicker Options:[0m
      [1m[36m--branches[0m  Include branches without worktrees
      [1m[36m--remotes[0m   Include remote branches
      [1m[36m--prs[0m       Include open PRs/MRs

[1m[32mAutomation:[0m
      [1m[36m--no-hooks[0m         Skip hooks
      [1m[36m--format[0m[36m [0m[36m<FORMAT>[0m  Output format [default: text] [possible values: text, json]

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m                Working directory for this command
      [1m[36m--config[0m[36m [0m[36m<path>[0m      User config file path
      [1m[36m--config-set[0m[36m [0m[36m<toml>[0m  Override config with inline TOML, e.g. --config-set list.full=true (repeatable)
  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m         Verbose output (-v: info logs + hook/alias template variables on stderr; -vv: also debug logs and raw subprocess output written to .git/wt/logs/). Set WORKTRUNK_VERBOSE=0|1|2 to apply the same level everywhere — including shell completion, which no flag can reach
  [1m[36m-y[0m, [1m[36m--yes[0m                Skip approval prompts

----- stderr -----
