tests/snapshots/integration__integration_tests__help__help_sync_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - sync
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt sync - Merge and keep the worktree (alias for [1mmerge --no-remove[0m)[0m

Identical to [1mwt merge --no-remove[0m. Syncs your branch to target while preserving the worktree.[0m

Usage: [1m[36mwt sync[0m [36m[OPTIONS][0m [36m[TARGET][0m

[1m[32mArguments:[0m
  [36m[TARGET][0m
          Target branch[0m
          
          Defaults to default branch.[0m

[1m[32mOptions:[0m
      [1m[36m--no-squash[0m
          Skip commit squashing

      [1m[36m--no-commit[0m
          Skip commit and squash

      [1m[36m--no-rebase[0m
          Skip rebase (fail if not already rebased)

      [1m[36m--no-verify[0m
          Skip hooks

  [1m[36m-y[0m, [1m[36m--yes[0m
          Skip approval prompts

      [1m[36m--stage[0m[36m [0m[36m<STAGE>[0m
          What to stage before committing [default: all]

          Possible values:
          - [1m[36mall[0m:     Stage everything: untracked files + unstaged tracked changes
          - [1m[36mtracked[0m: Stage tracked changes only (like [1mgit add -u[0m)
          - [1m[36mnone[0m:    Stage nothing, commit only what's already in the index

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: hooks, templates; -vv: debug report)

[2mwt sync[0m is shorthand for [2mwt merge --no-remove[0m. It runs the full merge pipeline but keeps the worktree for continued development.

[1m[32mExamples[0m

Sync to the default branch:

  [2mwt sync[0m

Sync to a different branch:

  [2mwt sync develop[0m

[1m[32mUse cases[0m

- Integrate changes to main while continuing work on the feature
- Keep a long-running feature branch in sync with main
- Test that your changes merge cleanly without abandoning the worktree

[1m[32mSee also[0m

- [2mwt merge[0m — Full documentation of the merge pipeline
