tests/snapshots/integration__integration_tests__help__help_sync_short.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - sync
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt sync - Merge and keep the worktree (alias for [1mmerge --no-remove[0m)

Usage: [1m[36mwt sync[0m [36m[OPTIONS][0m [36m[TARGET][0m

[1m[32mArguments:[0m
  [36m[TARGET][0m  Target branch

[1m[32mOptions:[0m
      [1m[36m--no-squash[0m      Skip commit squashing
      [1m[36m--no-commit[0m      Skip commit and squash
      [1m[36m--no-rebase[0m      Skip rebase (fail if not already rebased)
      [1m[36m--no-verify[0m      Skip hooks
  [1m[36m-y[0m, [1m[36m--yes[0m            Skip approval prompts
      [1m[36m--stage[0m[36m [0m[36m<STAGE>[0m  What to stage before committing [default: all] [possible values: all, tracked, none]
  [1m[36m-h[0m, [1m[36m--help[0m           Print help (see more with '--help')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m            Working directory for this command
      [1m[36m--config[0m[36m [0m[36m<path>[0m  User config file path
  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m     Verbose output (-v: hooks, templates; -vv: debug report)
